Complete login with google, github and database.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,13 @@ spring.jpa.show.sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+#oauth2 Configuration
+spring.security.oauth2.client.registration.google.client-name=google
+spring.security.oauth2.client.registration.google.client-id=  125786543417-8v5rt26r93cd52l99st5i86ud9qv3mde.apps.googleusercontent.com
+spring.security.oauth2.client.registration.google.client-secret= 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
+
+
+spring.security.oauth2.client.registration.github.client-name=github
+spring.security.oauth2.client.registration.github.client-id=   Iv23liRSwEeg4b3AQJ2J
+spring.security.oauth2.client.registration.github.client-secret= 725fd595a25120acb1ef6800fc6fc1b197e30870
